# Sentiment-Analysis-API

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
models/: nltk_sentiment_nb.py  nltk_vader.py  textblob_sentiment.py  tweet_senti_nb.pickle
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_models.py
